# shipstation-client

./: .darglint  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: build.yaml  pre-commit.yaml  pytest.yaml  release.yaml
docker/: Dockerfile  README.md
shipstation/: __init__.py  api.py  base.py  constants.py  http.py  models.py  pagination.py
tests/: api_data.py  conftest.py  test_api.py  test_customs_item.py  test_international_options.py  test_order.py  test_order_fetch.py  test_pagination.py  test_shipstation.py  tests.md
