[tool.poetry]
name = "shipstation-client"
version = "0.0.0"
description = "Python bindings for the ShipStation API"
license = "MIT"
authors = ["AgriTheory <hello@agritheory.com>"]
readme = "README.md"
homepage = "https://github.com/agritheory/shipstation-client"
repository = "https://github.com/agritheory/shipstation-client"
keywords = ["shipstation", "client", "api", "python", "orders", "shipments"]
packages = [{ include = "shipstation" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
attrs = "^23.2.0"
cattrs = "^23.2.3"
httpx = "^0.27.0"
python-dateutil = "^2.8.1"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.8"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
pytest-httpx = "^0.30.0"
pyupgrade = "^3.15.2"
respx = "^0.21.1"

[tool.pytest.ini_options]
addopts = "--cov=shipstation --cov-report term"

[tool.black]
target-version = ["py310"]

[tool.isort]
default_section = "FIRSTPARTY"
include_trailing_comma = true
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
multi_line_output = 3
profile = "black"
sections = "TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
use_parentheses = true

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]

[tool.semantic_release.branches.version]
match = "(main|master)"
